--- a/refs.bib
+++ b/refs.bib
@@ -512,3 +512,30 @@ month = "1",
 url = "https://kilthub.cmu.edu/articles/journal_contribution/Remote_Runtime_Steering_of_Integrated_Terascale_Simulation_and_Visualization/6608987",
 doi = "10.1184/R1/6608987.v1"
 }
+@book{wieringa_design_2014,
+	address = {Berlin, Heidelberg},
+	title = {Design {Science} {Methodology} for {Information} {Systems} and {Software} {Engineering}},
+	copyright = {https://www.springernature.com/gp/researchers/text-and-data-mining},
+	isbn = {978-3-662-43838-1 978-3-662-43839-8},
+	url = {https://link.springer.com/10.1007/978-3-662-43839-8},
+	language = {en},
+	urldate = {2024-06-02},
+	publisher = {Springer},
+	author = {Wieringa, Roel J.},
+	year = {2014},
+	doi = {10.1007/978-3-662-43839-8},
+	keywords = {case studies, design science, empirical studies, evaluation, experimentation, requirements engineering, research methodologies, software design engineering, validation},
+}
+@article{Page2021,
+  title = {The PRISMA 2020 statement: An updated guideline for reporting systematic reviews},
+  volume = {134},
+  ISSN = {0895-4356},
+  url = {http://dx.doi.org/10.1016/j.jclinepi.2021.03.001},
+  DOI = {10.1016/j.jclinepi.2021.03.001},
+  journal = {Journal of Clinical Epidemiology},
+  publisher = {Elsevier BV},
+  author = {Page,  Matthew J. and McKenzie,  Joanne E. and Bossuyt,  Patrick M. and Boutron,  Isabelle and Hoffmann,  Tammy C. and Mulrow,  Cynthia D. and Shamseer,  Larissa and Tetzlaff,  Jennifer M. and Akl,  Elie A. and Brennan,  Sue E. and Chou,  Roger and Glanville,  Julie and Grimshaw,  Jeremy M. and Hróbjartsson,  Asbjørn and Lalu,  Manoj M. and Li,  Tianjing and Loder,  Elizabeth W. and Mayo-Wilson,  Evan and McDonald,  Steve and McGuinness,  Luke A. and Stewart,  Lesley A. and Thomas,  James and Tricco,  Andrea C. and Welch,  Vivian A. and Whiting,  Penny and Moher,  David},
+  year = {2021},
+  month = jun,
+  pages = {178–189}
+}
