--- a/document.tex
+++ b/document.tex
@@ -24,6 +24,7 @@
 \usepackage[backend=biber]{biblatex}
 \usepackage{graphicx}
 \usepackage{xcolor}
+\usepackage{tikz}
 \graphicspath{{./images/}}
 \addbibresource{refs.bib}
 
@@ -48,7 +49,7 @@
 \input{related_work}
 \chapter{Metodología}
 \label{chap:metodologia}
-
+\input{methodology}
 
 \printbibliography
 
