--- a/refs.bib
+++ b/refs.bib
@@ -539,3 +539,35 @@ doi = "10.1184/R1/6608987.v1"
   month = jun,
   pages = {178–189}
 }
+@article{Folch2023,
+  title = {The EU Center of Excellence for Exascale in Solid Earth (ChEESE): Implementation,  results,  and roadmap for the second phase},
+  volume = {146},
+  ISSN = {0167-739X},
+  url = {http://dx.doi.org/10.1016/j.future.2023.04.006},
+  DOI = {10.1016/j.future.2023.04.006},
+  journal = {Future Generation Computer Systems},
+  publisher = {Elsevier BV},
+  author = {Folch,  Arnau and Abril,  Claudia and Afanasiev,  Michael and Amati,  Giorgio and Bader,  Michael and Badia,  Rosa M. and Bayraktar,  Hafize B. and Barsotti,  Sara and Basili,  Roberto and Bernardi,  Fabrizio and Boehm,  Christian and Brizuela,  Beatriz and Brogi,  Federico and Cabrera,  Eduardo and Casarotti,  Emanuele and Castro,  Manuel J. and Cerminara,  Matteo and Cirella,  Antonella and Cheptsov,  Alexey and Conejero,  Javier and Costa,  Antonio and de la Asunción,  Marc and de la Puente,  Josep and Djuric,  Marco and Dorozhinskii,  Ravil and Espinosa,  Gabriela and Esposti-Ongaro,  Tomaso and Farnós,  Joan and Favretto-Cristini,  Nathalie and Fichtner,  Andreas and Fournier,  Alexandre and Gabriel,  Alice-Agnes and Gallard,  Jean-Matthieu and Gibbons,  Steven J. and Glimsdal,  Sylfest and González-Vida,  José Manuel and Gracia,  Jose and Gregorio,  Rose and Gutierrez,  Natalia and Halldorsson,  Benedikt and Hamitou,  Okba and Houzeaux,  Guillaume and Jaure,  Stephan and Kessar,  Mouloud and Krenz,  Lukas and Krischer,  Lion and Laforet,  Soline and Lanucara,  Piero and Li,  Bo and Lorenzino,  Maria Concetta and Lorito,  Stefano and Løvholt,  Finn and Macedonio,  Giovanni and Macías,  Jorge and Marín,  Guillermo and Martínez Montesinos,  Beatriz and Mingari,  Leonardo and Moguilny,  Geneviève and Montellier,  Vadim and Monterrubio-Velasco,  Marisol and Moulard,  Georges Emmanuel and Nagaso,  Masaru and Nazaria,  Massimo and Niethammer,  Christoph and Pardini,  Federica and Pienkowska,  Marta and Pizzimenti,  Luca and Poiata,  Natalia and Rannabauer,  Leonhard and Rojas,  Otilio and Rodriguez,  Juan Esteban and Romano,  Fabrizio and Rudyy,  Oleksandr and Ruggiero,  Vittorio and Samfass,  Philipp and Sánchez-Linares,  Carlos and Sanchez,  Sabrina and Sandri,  Laura and Scala,  Antonio and Schaeffer,  Nathanael and Schuchart,  Joseph and Selva,  Jacopo and Sergeant,  Amadine and Stallone,  Angela and Taroni,  Matteo and Thrastarson,  Solvi and Titos,  Manuel and Tonelllo,  Nadia and Tonini,  Roberto and Ulrich,  Thomas and Vilotte,  Jean-Pierre and V\"{o}ge,  Malte and Volpe,  Manuela and Aniko Wirp,  Sara and W\"{o}ssner,  Uwe},
+  year = {2023},
+  month = sep,
+  pages = {47–61}
+}
+@misc{githubGitHubHPGeoCawpodcos,
+	author = {},
+	title = {{G}it{H}ub - {H}{P}{G}eo{C}/awp-odc-os: {T}he {A}nelastic {W}ave {P}ropagation software (awp-odc-os) simulates wave propagation in a 3{D} viscoelastic or elastic solid. --- github.com},
+	howpublished = {\url{https://github.com/HPGeoC/awp-odc-os/tree/master}},
+	year = {},
+	note = {[Accessed 11-06-2024]},
+}
+@inbook{Larsen2022,
+  title = {Ascent: A Flyweight In Situ Library for Exascale Simulations},
+  ISBN = {9783030816278},
+  ISSN = {2197-666X},
+  url = {http://dx.doi.org/10.1007/978-3-030-81627-8_12},
+  DOI = {10.1007/978-3-030-81627-8_12},
+  booktitle = {In Situ Visualization for Computational Science},
+  publisher = {Springer International Publishing},
+  author = {Larsen,  Matthew and Brugger,  Eric and Childs,  Hank and Harrison,  Cyrus},
+  year = {2022},
+  pages = {255–279}
+}
