--- a/titlepage.tex
+++ b/titlepage.tex
@@ -5,7 +5,7 @@
     \textsc{Sistema de Estudios de Posgrado}
 
     \vspace{4.5cm}
-    \Large{\textsc{Modificación de una simulación sísmica numérica para que haga uso de bibliotecas de análisis y visualización in-situ.}}
+    \Large{\textsc{Uso de bibliotecas de análisis y visualización in-situ en una simulación sísmica numérica.}}
 
     \vspace{3.5cm}
    \large Propuesta de tesis de maestría sometida a la consideración de la Comisión del Programa de Estudios de Posgrado en Computación e Informática para optar al grado y título de Maestría Académica en Ciencias de la Computación en Informática.
